--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Montaga&display=swap');
+
+* {font-family: 'Montaga', serif;}
+
+body {
+  width: 100%;
+  height: 100vh;
+  background-image: url(./assets/background.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+.custom-login{
+  background-color: rgba(22, 20, 20, 0.557);
+  border-radius: 10px;
+  border: 3px solid rgba(0, 0, 0, 0.19);
+  /*margin-top moves the portion down */
+  margin-top: 20vh
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.custom-login h1 {
+  color: rgb(228, 215, 215);
+  font-size: calc(23px + 2.5vw);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.email {
+  color: wheat;
+}
+.password{
+  color: wheat;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  cursor: pointer;
+  transform: scale(1.0);
+  transition: transform 0.23s ease-in-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+  transform: scale(1.13);
+  filter: drop-shadow(0 0 10px rgb(0, 0, 0));
 }
